deploy/bees-deploy-online.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bees
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bees
  strategy:
    rollingUpdate:
      maxSurge: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bees
        version: v1
    spec:

      containers:
      - name: bees
        image: itmabo/bees:v1
        imagePullPolicy: Always
        ports:
        - name: main-port
          containerPort: 8080
        volumeMounts:
        - mountPath: /home/log
          name: log-volume
        livenessProbe:
          httpGet:
            path: /actuator/info
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /actuator/info
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
      volumes:
      - name: log-volume
        hostPath:
          path: /home/log
          type: DirectoryOrCreate
---

apiVersion: v1
kind: Service
metadata:
  name: bees
  namespace: default
  labels:
    app: bees
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: main-port
  selector:
    app: bees
  type: ClusterIP

---
