deploy/bees-deploy-with-jwt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bees
  namespace: central
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bees
      version: v1
  template:
    metadata:
      labels:
        app: bees
        version: v1
    spec:
      containers:
      - name: bees
        image: itmabo/bees:v1
        imagePullPolicy: Always
        ports:
        - name: main-port
          containerPort: 8080
        volumeMounts:
        - mountPath: /home/log
          name: log-volume
        livenessProbe:
          httpGet:
            path: /actuator/info
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /actuator/info
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
      volumes:
      - name: log-volume
        hostPath:
          path: /home/log
          type: DirectoryOrCreate
---

apiVersion: v1
kind: Service
metadata:
  name: bees
  namespace: central
  labels:
    app: bees
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: main-port
  selector:
    app: bees
  type: ClusterIP

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bees
  namespace: central
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: /bees
    rewrite:
      uri: /
    route:
    - destination:
        host: bees
        port:
          number: 80
---
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: "jwt-bees"
  namespace: central
  selector:
    matchLabels:
      app: bees
spec:
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.5/security/tools/jwt/samples/jwks.json"
