deploy/bees-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bees
  namespace: central
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bees
  strategy:
    rollingUpdate:
      maxSurge: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bees
        version: v1
    spec:
      containers:
      - name: bees
        image: itmabo/bees:v2
        imagePullPolicy: Always
        ports:
        - name: main-port
          containerPort: 8080
        volumeMounts:
        - mountPath: /home/log
          name: log-volume
        livenessProbe:
          httpGet:
            path: /actuator/info
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /actuator/info
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
      volumes:
      - name: log-volume
        hostPath:
          path: /home/log
          type: DirectoryOrCreate
---

apiVersion: v1
kind: Service
metadata:
  name: bees
  namespace: central
  labels:
    app: bees
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: main-port
  selector:
    app: bees
  type: ClusterIP

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bees
  namespace: central
spec:
  hosts:
  - api.tb1.sayweee.net
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: /bees
    rewrite:
      uri: /
    route:
    - destination:
        host: bees
        port:
          number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bees
  namespace: central
spec:
  host: bees
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http2MaxRequests: 1000
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 6
      interval: 5s
      baseEjectionTime: 5s
