deploy/envoy_filter_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: test-lua
  namespace: istio-system
spec:
  filters:
    - listenerMatch:
        listenerType: GATEWAY
      filterType: HTTP
      filterName: envoy.lua
      filterConfig:
        inlineCode: |
          function envoy_on_response(response_handle)
              local cors_info = response_handle:headers():get("access-control-allow-origin")
              if cors_info == nil then
                response_handle:headers():add("access-control-allow-origin", "*")
              else
                response_handle:logInfo("Cors origin info->"..cors_info)
              end
          end
